Ajustes nas classes