@@ -25,56 +25,34 @@ public class LivroController {
 
         int id = 0;
 
-        if (!this.livros.isEmpty()) {
-            id = this.livros.getLast().getId() + 1;
-        }
+        if (!livros.isEmpty()) { id = livros.getLast().getId() + 1; }
 
         Optional<Autor> autorExistente = AutorController.buscarAutor(autor);
         Optional<Categoria> categoriaExistente = CategoriaController.buscarCategoria(categoria);
         LocalDate data = LocalDate.parse(dataPublicacao, DateTimeFormatter.ofPattern("dd/MM/yyyy"));
 
-        if (autorExistente.isEmpty()) {
-            return "Autor Inexistente!";
-        }
-        if (categoriaExistente.isEmpty()) {
-            return "Categoria Inexistente!";
-        }
-        if (titulo.isEmpty()) {
-            return "Titulo em branco!";
-        }
-        if (exemplaresDisponiveis <= 0) {
-            return "Numero de exemplares em branco ou invalido!";
-        }
+        if (autorExistente.isEmpty()) { return "Autor Inexistente!"; }
+        if (categoriaExistente.isEmpty()) { return "Categoria Inexistente!"; }
+        if (titulo.isEmpty()) { return "Titulo em branco!"; }
+        if (exemplaresDisponiveis <= 0) { return "Numero de exemplares em branco ou invalido!"; }
 
         Livro livro = LivroFactory.criarLivro(titulo, autorExistente.get(), data, exemplaresDisponiveis, categoriaExistente.get(), id);
 
-        this.livros.add(livro);
+        livros.add(livro);
         return "Livro cadastrado com sucesso";
     }
 
     public String alterarLivro(String titulo, String novoTitulo, String autor, String dataPublicacao, int exemplaresDisponiveis, String categoria) {
 
-        if (AutorController.buscarAutor(autor).isEmpty()) {
-            return "Autor Inexistente!";
-        }
-        if (CategoriaController.buscarCategoria(categoria).isEmpty()) {
-            return "Categoria Inexistente!";
-        }
-        if (pesquisarLivroNome(titulo).isEmpty()) {
-            return "Livro não encontrado!";
-        }
-        if (novoTitulo.isEmpty()) {
-            return "Campo novo titulo em branco!";
-        }
-        if (dataPublicacao.isEmpty()) {
-            return "Campo data em branco!";
-        }
-        if (exemplaresDisponiveis <= 0) {
-            return "Exemplares em branco ou invalido!";
-        }
+        if (AutorController.buscarAutor(autor).isEmpty()) {return "Autor Inexistente!";}
+        if (CategoriaController.buscarCategoria(categoria).isEmpty()) {return "Categoria Inexistente!";}
+        if (pesquisarLivroNome(titulo).isEmpty()) {return "Livro não encontrado!";}
+        if (novoTitulo.isEmpty()) {return "Campo novo titulo em branco!";}
+        if (dataPublicacao.isEmpty()) {return "Campo data em branco!";}
+        if (exemplaresDisponiveis <= 0) {return "Exemplares em branco ou invalido!";}
 
         pesquisarLivroNome(titulo).ifPresent(livro -> {
-            livro.setTitulo(titulo);
+            livro.setTitulo(novoTitulo);
             livro.setAutor(AutorController.buscarAutor(autor).get());
             livro.setAnoDePublicacao(LocalDate.parse(dataPublicacao, DateTimeFormatter.ofPattern("dd/MM/yyyy")));
             livro.setExemplaresDisponiveis(exemplaresDisponiveis);
@@ -86,11 +64,9 @@ public class LivroController {
 
     public String excluirLivro(String titulo) {
 
-        if (pesquisarLivroNome(titulo).isEmpty()) {
-            return "Livro inexistente!";
-        }
+        if (pesquisarLivroNome(titulo).isEmpty()) {return "Livro inexistente!";}
 
-        this.livros.remove(pesquisarLivroNome(titulo).get());
+        livros.remove(pesquisarLivroNome(titulo).get());
         return "Livro excluido com sucesso!";
     }
 
@@ -103,7 +79,8 @@ public class LivroController {
     }
 
     public Optional<Livro> pesquisarLivroId(int id) {
-        return this.livros.stream().filter(l -> l.getId() == id).findFirst();
+        return livros.stream()
+                .filter(l -> l.getId() == id).findFirst();
     }
 
     public static Optional<Livro> pesquisarLivroNome(String titulo) {
@@ -113,7 +90,8 @@ public class LivroController {
     }
 
     public List<Livro> pesquisarLivrosAutor(String autor) {
-        return this.livros.stream().filter(l -> l.getAutor().getNome().equalsIgnoreCase(autor)).collect(Collectors.toList());
+        return livros.stream()
+                .filter(l -> l.getAutor().getNome().equalsIgnoreCase(autor)).toList();
     }
 
 }
